# RSX

./: .gitignore  CMakeLists.txt  csv_io.cpp  csv_io.h  custom_ransac.cpp  custom_ransac.h  helpers.cpp  helpers.h  inputPointCloudFile.py  main.cpp  open3Dransac.py  pcl_traversibility_score.cpp  planar_segmentation.cpp  plot.py  plotData.csv  segment_pcl.cpp  segment_pcl.h
output/: main
ros_nodes/devel/: .catkin  local_setup.sh  setup.sh
ros_nodes/devel/lib/pkgconfig/: point_cloud.pc
ros_nodes/devel/share/point_cloud/cmake/: point_cloudConfig.cmake
ros_nodes/src/point_cloud/: CMakeLists.txt  package.xml
